discussion/kv_engine/159156/159156_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47687: Prevent dropping of prepares if it can be undone by Magma rollback

Magma creates checkpoints every few minutes which are used for rollback. Since
magma does background compaction it is possible for compaction to drop deletes
between the checkpoints. If kv_engine requests a rollback to one of these
checkpoints, the sequence scan does not see the compacted keys resulting in the
rollback callback not being called for these keys. This patch ensures we dont
drop prepares until it is older than the oldest magma checkpoint.

Change-Id: I6cb2524245e0c1992b1989afff7f267995ee7424

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-08-11 19:08:04.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-11 19:18:13.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38537/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(386): error C2039: "MinRollbackSeqNo": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38537/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11261/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32: error: no member named "MinRollbackSeqNo" in "magma::Magma" [clang-diagnostic-error]
                seqno < magma->MinRollbackSeqNo(vbid.get())) {
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11261/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: no member named "MinRollbackSeqNo" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11261/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32856/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32856/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11977/ : FAILURE

Compile error at [2021-08-11T19:10:39.978Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11977/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/899/ : FAILURE

Compile error at [2021-08-11T19:15:02.524Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: ?class magma::Magma? has no member named ?MinRollbackSeqNo?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/899/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/892/ : FAILURE

Compile error at [2021-08-11T19:09:37.683Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master_2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/892/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13415/ : FAILURE

Compile error at [2021-08-11T19:09:28.079Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13415/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13054/ : FAILURE

Compile error at [2021-08-11T19:10:03.477Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: ?class magma::Magma? has no member named ?MinRollbackSeqNo?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13054/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20962/ : FAILURE

Compile error at [2021-08-11T19:10:10.526Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:386:32:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20962/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9957/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12860/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Apaar gupta
Date: 2021-08-16 13:42:56.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
